--- a/LifeSaverSite/Views/Shared/_Layout.cshtml
+++ b/LifeSaverSite/Views/Shared/_Layout.cshtml
@@ -23,6 +23,10 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Report", "Index", "Report")</li>
+                    <li>@Html.ActionLink("Image", "Image", "Home")</li>
+
+
                 </ul>
             </div>
         </div>
