Linked Invetory webpage

--- a/LifeSaverSite/Views/Shared/_Layout.cshtml
+++ b/LifeSaverSite/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Report", "Index", "Report")</li>
                     <li>@Html.ActionLink("Image", "Image", "Home")</li>
+                    <li>@Html.ActionLink("Inventory", "Inventory", "Home")</li>
 
 
                 </ul>
