added contact for clinics

--- a/LifeSaverSite/Views/Home/Contact.cshtml
+++ b/LifeSaverSite/Views/Home/Contact.cshtml
@@ -5,10 +5,24 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Clinic A<br />
+    Ishaga Rd, Idi-Araba, Lagos, Nigeria<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    +234 1 232 1212
+</address>
+
+<address>
+    Clinic B<br />
+    5th Ave, Idi-Araba, Lagos, Nigeria<br />
+    <abbr title="Phone">P:</abbr>
+    +234 1 212 8634
+</address>
+
+<address>
+    Clinic C<br />
+    Ishaga Street, Idi-Araba, Lagos, Nigeria<br />
+    <abbr title="Phone">P:</abbr>
+    +234 1 812 5635
 </address>
 
 <address>
