--- a/LifeSaverSite/Views/Home/Contact.cshtml
+++ b/LifeSaverSite/Views/Home/Contact.cshtml
@@ -8,24 +8,27 @@
     Clinic A<br />
     Ishaga Rd, Idi-Araba, Lagos, Nigeria<br />
     <abbr title="Phone">P:</abbr>
-    +234 1 232 1212
+    +234 154 232 1212
 </address>
 
 <address>
     Clinic B<br />
-    5th Ave, Idi-Araba, Lagos, Nigeria<br />
+    Cadastral Zone, Life Camp, Plot 113, Abuja, Nigeria<br />
     <abbr title="Phone">P:</abbr>
-    +234 1 212 8634
+    +234 123 212 8634
 </address>
 
 <address>
     Clinic C<br />
-    Ishaga Street, Idi-Araba, Lagos, Nigeria<br />
+    Dorayi Babba, 1C Forestry Road, Kano, Nigeria<br />
     <abbr title="Phone">P:</abbr>
-    +234 1 812 5635
+    +234 545 348 9093
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    Clinic D<br />
+    I Katsina Rd, Kano, Nigeria<br />
+    <abbr title="Phone">P:</abbr>
+    +234 143 812 5635
 </address>
+
