--- a/LifeSaverSite/Views/Home/DashBoard.cshtml
+++ b/LifeSaverSite/Views/Home/DashBoard.cshtml
@@ -3,5 +3,68 @@
     ViewBag.Title = "DashBoard";
 }
 
-<h2>DashBoard</h2>
+
+<div class="container-fluid">
+    <img src="cinqueterre.jpg" class="rounded-circle" alt="Logo" width="304" height="236">
+</div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+    <div class="flex-grow-1 d-flex">
+
+        <form class="form-inline flex-nowrap bg-light mx-0 mx-lg-auto rounded p-1">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+
+    </div>
+
+</nav>
+
+
+<div class="text-center">
+    <h2>Dashboard</h2>
+</div>
+<div class="container">
+    <ul class="nav">
+        <li class="nav-item">
+            <a class="nav-link" href="#">Dashboard</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Report</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Inventroy</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Search</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Compare</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Image</a>
+        </li>
+
+    </ul>
+</div>
+
+<div class="container">
+    <nav class="navbar navbar-expand-sm bg-light justify-content-center">
+
+        <ul class="navbar">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact Us</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">SiteMap</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">privacy Policies</a>
+            </li>
+
+        </ul>
+    </nav>
+</div>
+
+
 
