--- a/Lifesaver/Views/Shared/_Layout.cshtml
+++ b/Lifesaver/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿<!DOCTYPE html>
-<html>
+﻿
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,13 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand">Navbar</a>
+        <form class="form-inline">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+    </nav>
 
                 <div class="container body-content">
                     @RenderBody()
@@ -22,4 +27,4 @@
                 @Scripts.Render("~/bundles/bootstrap")
                 @RenderSection("scripts", required: false)
 </body>
-</html>
+
