Added image to report to represent a report for may

--- a/LifeSaverSite/Views/Home/Report.cshtml
+++ b/LifeSaverSite/Views/Home/Report.cshtml
@@ -3,9 +3,10 @@
     ViewBag.Title = "Report";
 
 }
-<img src= "~/Content/Img/imgrep.PNG"/>
+
 
 
 <h2>Report</h2>
 
 
+<img src="~/Content/Img/reportpic.jpg" class="mx-auto d-block img-fluid img-thumbnail" />
