--- a/Lifesaver/Views/Home/DashBoard.cshtml
+++ b/Lifesaver/Views/Home/DashBoard.cshtml
@@ -1,14 +1,10 @@
 ﻿@{
     ViewBag.Title = "Dashboard";
 }
-<link rel="stylesheet" href="~/Stylesheets/bootstrap.min.css">
+
 <script src="~/Scripts/jquery.min.js"></script>
 <script src="~/Scripts/popper.min.js"></script>
 <script src="~/Scripts/bootstrap.min.js"></script>
-<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>-->
 
 <style>
     /* Make the image fully responsive */
@@ -18,15 +14,8 @@
     }
 </style>
 <div class="row">
-    <div class="col-sm-1">
-        <a class="nav-link"> <h5>Dashboard</h5></a>
-        <a class="nav-link"> <h5>Reports</h5></a>
-        <a class="nav-link"> <h5>Inventory</h5></a>
-        <a class="nav-link"> <h5>Search</h5></a>
-        <a class="nav-link"> <h5>Compare</h5></a>
-        <a class="nav-link"> <h5>Image</h5></a>
-    </div>
-    <div class="col-sm-11">
+    <div class="col-md-2"></div>
+    <div class="col-sm-8">
         <div id="demo" class="carousel slide" data-ride="carousel">
 
             <!-- Indicators -->
@@ -59,5 +48,56 @@
         </div>
 
 
+    </div>
+    <div class="col-md-2"></div>
+</div>
+<div class="row">
+    <div class="col-md-3">
+        <div class="container">
+            <div class="card" style="width:400px">
+                <img class="card-img-top" src="../Images/1.jpeg" alt="Card image" style="width:100%">
+                <div class="card-body">
+                    <h4 class="card-title">Reports</h4>
+                    <p class="card-text">To get overall summary about reported cases across different locations.</p>
+                    <a href="~/Views/Home/LoginPage.cshtml" class="btn btn-primary">View Reports</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="container">
+            <div class="card" style="width:400px">
+                <img class="card-img-top" src="../Images/1.jpeg" alt="Card image" style="width:100%">
+                <div class="card-body">
+                    <h4 class="card-title">Report</h4>
+                    <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+                    <a href="#" class="btn btn-primary">See Profile</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="container">
+            <div class="card" style="width:400px">
+                <img class="card-img-top" src="../Images/1.jpeg" alt="Card image" style="width:100%">
+                <div class="card-body">
+                    <h4 class="card-title">Report</h4>
+                    <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+                    <a href="#" class="btn btn-primary">See Profile</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="container">
+            <div class="card" style="width:400px">
+                <img class="card-img-top" src="../Images/1.jpeg" alt="Card image" style="width:100%">
+                <div class="card-body">
+                    <h4 class="card-title">Report</h4>
+                    <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+                    <a href="#" class="btn btn-primary">See Profile</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
