--- a/Lifesaver/Views/Home/LoginPage.cshtml
+++ b/Lifesaver/Views/Home/LoginPage.cshtml
@@ -3,28 +3,19 @@
     ViewBag.Title = "LoginPage";
 }
 <head>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top " style="background-color: #61D4CC">
-        <div class="container">
-            <div class="navbar-header ">
-                <img src="../Images/logo3.png" alt="logo" width="100" height="100">
-            </div>
-        </div>
-    </div>
-    <div class="jumbotron text-center bg-info" style="margin-bottom:0">
-    </div>
-    <div class="container-fluid">
+<body style="background-image: url( ~/Images/login2.jpg); background-repeat:no-repeat; background-size:cover">
+    
+
+    <div class="container">
         <div class="row">
             <div class="col-sm-6 ">
-                <img src="../Images/newborn.jpg" alt="newborn">
+               
             </div>
-            <div class="col-sm-6 bg-info">
+            <div class="col-sm-6 ">
                 <div class="row-flex-justify-content-center align-items-center h-100">
                     <div class="text-center">
                         <h1>Login</h1>
@@ -55,7 +46,6 @@
 
 
 
-    <div class="jumbotron text-center bg-info" style="margin-bottom:0">
-    </div>
+    
 </body>
 
