added image to photos

--- a/LifeSaverSite/Views/Home/Report.cshtml
+++ b/LifeSaverSite/Views/Home/Report.cshtml
@@ -8,5 +8,12 @@
 
 <h2>Report</h2>
 
-
+<ul class="Select Month">
+    <li class="list-group-item">Januaray Report</li>
+    <li class="list-group-item">February Report</li>
+    <li class="list-group-item">March Report</li>
+    <li class="list-group-item">April Report</li>
+    <li class="list-group-item">May Report</li>
+    
+</ul>
 <img src="~/Content/Img/reportpic.jpg" class="mx-auto d-block img-fluid img-thumbnail" />
