Dashboard and Map, BundleConfig updates

--- a/Lifesaver/Views/Shared/partial.cshtml
+++ b/Lifesaver/Views/Shared/partial.cshtml
@@ -13,9 +13,11 @@
             <ul class="nav navbar-nav pull-right">
 
                 
-                <li class="form-inline">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-success" type="submit">Search</button>
+                <li class="flex-grow-1 d-flex">
+                    <form class="form-inline flex-nowrap bg-light mx-0 mx-lg-auto rounded p-1">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
                 </li>
 
             </ul>
