--- a/Lifesaver/Views/Home/DashBoard.cshtml
+++ b/Lifesaver/Views/Home/DashBoard.cshtml
@@ -13,22 +13,23 @@
         height: 100%;
     }
 </style>
+
 <div class="row">
     <div class="col-md-2"></div>
     <div class="col-sm-8">
         <div id="demo" class="carousel slide" data-ride="carousel">
-
-            <!-- Indicators -->
             <ul class="carousel-indicators">
                 <li data-target="#demo" data-slide-to="0" class="active"></li>
                 <li data-target="#demo" data-slide-to="1"></li>
                 <li data-target="#demo" data-slide-to="2"></li>
             </ul>
-
-            <!-- The slideshow -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../Images/1.jpeg" alt="Los Angeles" width="1100" height="500">
+                    <img src="../Images/1.jpeg" alt=" Reports" width="1100" height="500">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Reports</h5>
+                        <p>hai reports</p>
+                    </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../Images/2.jpg" alt="Chicago" width="1100" height="500">
@@ -51,53 +52,39 @@
     </div>
     <div class="col-md-2"></div>
 </div>
-<div class="row">
-    <div class="col-md-3">
-        <div class="container">
-            <div class="card" style="width:400px">
-                <img class="card-img-top" src="../Images/1.jpeg" alt="Card image" style="width:100%">
-                <div class="card-body">
-                    <h4 class="card-title">Reports</h4>
-                    <p class="card-text">To get overall summary about reported cases across different locations.</p>
-                    <a href="~/Views/Home/LoginPage.cshtml" class="btn btn-primary">View Reports</a>
-                </div>
-            </div>
+
+<div class="card-deck">
+
+    <div class="card">
+        <img class="card-img-top" src="../Images/1.jpeg" alt="Card image">
+        <div class="card-body">
+            <h4 class="card-title">Images</h4>
+            <p class="card-text">To get overall summary about reported cases across different locations.</p>
+            <a href="~/Views/Home/LoginPage.cshtml" class="btn btn-primary">View Reports</a>
         </div>
     </div>
-    <div class="col-md-3">
-        <div class="container">
-            <div class="card" style="width:400px">
-                <img class="card-img-top" src="../Images/1.jpeg" alt="Card image" style="width:100%">
-                <div class="card-body">
-                    <h4 class="card-title">Report</h4>
-                    <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
-                    <a href="#" class="btn btn-primary">See Profile</a>
-                </div>
-            </div>
+    <div class="card">
+        <img class="card-img-top" src="../Images/1.jpeg" alt="Card image">
+        <div class="card-body">
+            <h4 class="card-title">Reports</h4>
+            <p class="card-text">To get overall summary about reported cases across different locations.</p>
+            <a href="~/Views/Home/LoginPage.cshtml" class="btn btn-primary">View Reports</a>
         </div>
     </div>
-    <div class="col-md-3">
-        <div class="container">
-            <div class="card" style="width:400px">
-                <img class="card-img-top" src="../Images/1.jpeg" alt="Card image" style="width:100%">
-                <div class="card-body">
-                    <h4 class="card-title">Report</h4>
-                    <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
-                    <a href="#" class="btn btn-primary">See Profile</a>
-                </div>
-            </div>
+    <div class="card">
+        <img class="card-img-top" src="../Images/1.jpeg" alt="Card image">
+        <div class="card-body">
+            <h4 class="card-title">Inventory</h4>
+            <p class="card-text">To get overall summary about reported cases across different locations.</p>
+            <a href="~/Views/Home/LoginPage.cshtml" class="btn btn-primary">View Reports</a>
         </div>
     </div>
-    <div class="col-md-3">
-        <div class="container">
-            <div class="card" style="width:400px">
-                <img class="card-img-top" src="../Images/1.jpeg" alt="Card image" style="width:100%">
-                <div class="card-body">
-                    <h4 class="card-title">Report</h4>
-                    <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
-                    <a href="#" class="btn btn-primary">See Profile</a>
-                </div>
-            </div>
+    <div class="card">
+        <img class="card-img-top" src="../Images/1.jpeg" alt="Card image">
+        <div class="card-body">
+            <h4 class="card-title">Compare</h4>
+            <p class="card-text">To get overall summary about reported cases across different locations.</p>
+            <a href="~/Views/Home/LoginPage.cshtml" class="btn btn-primary">View Reports</a>
         </div>
     </div>
 </div>
