--- a/LifeSaverSite/Views/Home/Inventory.cshtml
+++ b/LifeSaverSite/Views/Home/Inventory.cshtml
@@ -3,54 +3,58 @@
     ViewBag.Title = "Inventory";
 }
 
-    <div class="container">
-        <h2> Inventory</h2>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>InvetoryId</th>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Unit Prize</th>
-                    <th>Quantity In Stock</th>
-                    <th>Reorder Time (In Days)</th>
-                    <th> Reorder Quantity</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>001</td>
-                    <td>Test Strip</td>
-                    <td>Oron Clinic</td>
-                    <td>$1.00</td>
-                    <td>156</td>
-                    <td>23</td>
-                    <td>200</td>
-                </tr>
-            </tbody>
-            <tbody>
-                <tr>
-                    <td>002</td>
-                    <td>Test Strip</td>
-                    <td>Lagos Clinic</td>
-                    <td>$1.00</td>
-                    <td>20</td>
-                    <td>10</td>
-                    <td>300</td>
-                </tr>
-            </tbody>
-            <tbody>
-                <tr>
-                    <td>003</td>
-                    <td>Phone</td>
-                    <td>Yola Clinic</td>
-                    <td>$200.00</td>
-                    <td>0</td>
-                    <td>15</td>
-                    <td>1</td>
-                </tr>
-            </tbody>
-        </table>
+<!--  <body style="background-image:url('~/Content/Img/Inventory_Background.jpg'); background-repeat:no-repeat; background-size:cover">   -->
+<div class="container">
+    <h2> Inventory</h2>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>InvetoryId</th>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Unit Prize</th>
+                <th>Quantity In Stock</th>
+                <th>Reorder Time (In Days)</th>
+                <th> Reorder Quantity</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>001</td>
+                <td>Test Strip</td>
+                <td>Oron Clinic</td>
+                <td>$1.00</td>
+                <td>156</td>
+                <td>23</td>
+                <td>200</td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+                <td>002</td>
+                <td>Test Strip</td>
+                <td>Lagos Clinic</td>
+                <td>$1.00</td>
+                <td>20</td>
+                <td>10</td>
+                <td>300</td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+                <td>003</td>
+                <td>Phone</td>
+                <td>Yola Clinic</td>
+                <td>$200.00</td>
+                <td>0</td>
+                <td>15</td>
+                <td>1</td>
+            </tr>
+        </tbody>
+    </table>
+    <div class="text-right">
+    <button type="button" class="bottom-right">Back</button>
+    <button type="button" class="bottom-right">Next</button>
+    <button type="button" class="bottom-right">Last</button>
     </div>
-    </body>
-
+</div>
