Added Clinics Tab on Inventory webpage

--- a/LifeSaverSite/Views/Home/Inventory.cshtml
+++ b/LifeSaverSite/Views/Home/Inventory.cshtml
@@ -5,13 +5,20 @@
 
 <!--  <body style="background-image:url('~/Content/Img/Inventory_Background.jpg'); background-repeat:no-repeat; background-size:cover">   -->
 <div class="container">
-    <h2> Inventory</h2>
+    <h3>Inventory</h3>
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#">Lagos Clinics</a></li>
+        <li><a href="#">Yobe Clinics</a></li>
+        <li><a href="#">Abia Clinic</a></li>
+        <li><a href="#">Cross River Clinic</a></li>
+    </ul>
     <table class="table table-striped">
+        <thead><tr><th>Inventory List of Clinics in Lagos</th></tr></thead>
         <thead>
             <tr>
-                <th>InvetoryId</th>
+                <th>Clinic Id</th>
                 <th>Name</th>
-                <th>Description</th>
+                <th>Date of Order</th>
                 <th>Unit Prize</th>
                 <th>Quantity In Stock</th>
                 <th>Reorder Time (In Days)</th>
@@ -22,7 +29,7 @@
             <tr>
                 <td>001</td>
                 <td>Test Strip</td>
-                <td>Oron Clinic</td>
+                <td>05/01/2019</td>
                 <td>$1.00</td>
                 <td>156</td>
                 <td>23</td>
@@ -33,7 +40,7 @@
             <tr>
                 <td>002</td>
                 <td>Test Strip</td>
-                <td>Lagos Clinic</td>
+                <td>04/22/2019</td>
                 <td>$1.00</td>
                 <td>20</td>
                 <td>10</td>
@@ -44,7 +51,7 @@
             <tr>
                 <td>003</td>
                 <td>Phone</td>
-                <td>Yola Clinic</td>
+                <td>02/03/2019</td>
                 <td>$200.00</td>
                 <td>0</td>
                 <td>15</td>
@@ -53,8 +60,8 @@
         </tbody>
     </table>
     <div class="text-right">
-    <button type="button" class="bottom-right">Back</button>
-    <button type="button" class="bottom-right">Next</button>
-    <button type="button" class="bottom-right">Last</button>
+        <button type="button" class="bottom-right">Back</button>
+        <button type="button" class="bottom-right">Next</button>
+        <button type="button" class="bottom-right">Last</button>
     </div>
 </div>
