--- a/Lifesaver/Views/Home/DashBoard.cshtml
+++ b/Lifesaver/Views/Home/DashBoard.cshtml
@@ -1,28 +1,19 @@
 ﻿@{
     ViewBag.Title = "Dashboard";
 }
-
-<script src="~/Scripts/jquery.min.js"></script>
-<script src="~/Scripts/popper.min.js"></script>
-<script src="~/Scripts/bootstrap.min.js"></script>
-
-<style>
-    /* Make the image fully responsive */
-    .carousel-inner img {
-        width: 100%;
-        height: 100%;
-    }
-</style>
-
 <div class="row">
     <div class="col-md-2"></div>
     <div class="col-sm-8">
         <div id="demo" class="carousel slide" data-ride="carousel">
+
+            <!-- Indicators -->
             <ul class="carousel-indicators">
                 <li data-target="#demo" data-slide-to="0" class="active"></li>
                 <li data-target="#demo" data-slide-to="1"></li>
                 <li data-target="#demo" data-slide-to="2"></li>
             </ul>
+
+            <!-- The slideshow -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="../Images/1.jpeg" alt=" Reports" width="1100" height="500">
@@ -31,13 +22,18 @@
                         <p>hai reports</p>
                     </div>
                 </div>
+
                 <div class="carousel-item">
                     <img src="../Images/2.jpg" alt="Chicago" width="1100" height="500">
                 </div>
                 <div class="carousel-item">
                     <img src="../Images/3.jpg" alt="New York" width="1100" height="500">
                 </div>
+
             </div>
+
+
+
 
             <!-- Left and right controls -->
             <a class="carousel-control-prev" href="#demo" data-slide="prev">
@@ -47,7 +43,6 @@
                 <span class="carousel-control-next-icon"></span>
             </a>
         </div>
-
 
     </div>
     <div class="col-md-2"></div>
