added class to resize image in "image tab"

--- a/LifeSaverSite/Content/Site.css
+++ b/LifeSaverSite/Content/Site.css
@@ -21,4 +21,16 @@ input,
 select,
 textarea {
     max-width: 280px;
+
+}
+
+/*set image size to be 640 x 360px */
+.carousel-inner > .item > img {
+    width: 240px;
+    height: 360px;
+}
+
+.CarouselImage {
+    width: 640px;
+    height: 360px;s
 }
