--- a/LifeSaverSite/Views/Home/Image.cshtml
+++ b/LifeSaverSite/Views/Home/Image.cshtml
@@ -5,35 +5,34 @@
 
 <h2>Image</h2>
 
-<div id ="demo" class="carousel slide" data-ride="carousel">
 
-    <!-- Indicators -->
-    <ul class="carousel-indicators">
-        <li data-target="#demo" data-slide-to="0" class="active"></li>
-        <li data-target="#demo" data-slide-to="1"></li>
-        <li data-target="#demo" data-slide-to="2"></li>
-    </ul>
 
-    <!-- The slideshow -->
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
+      
+        }
         <div class="carousel-item active">
-            <img src="~/Content/Img/bluebox.JPG" alt="bluebox">
+            <img class="d-block w-100 CarouselImage" src="~/Content/Img/bluebox.JPG" alt="First slide">
         </div>
         <div class="carousel-item">
-            <img src="~/Content/Img/yellowbox.JPG" alt="yellowbox">
+            <img class="d-block w-100 CarouselImage" src="~/Content/Img/yellowbox.JPG" alt="Second slide">
         </div>
         <div class="carousel-item">
-            <img src="~/Content/Img/orangebox.JPG" alt="orangebox">
+            <img class="d-block w-100 CarouselImage" src="~/Content/Img/orangebox.JPG" alt="Third slide">
         </div>
     </div>
-
-    <!-- Left and right controls -->
-    <a class="carousel-control-prev" href="#demo" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#demo" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
     </a>
-
 </div>
+
+
+
+
+
 
