added object fit contain to the image resize class so that image will fit better

--- a/LifeSaverSite/Content/Site.css
+++ b/LifeSaverSite/Content/Site.css
@@ -24,13 +24,8 @@ textarea {
 
 }
 
-/*set image size to be 640 x 360px */
-.carousel-inner > .item > img {
-    width: 240px;
-    height: 360px;
-}
-
 .CarouselImage {
     width: 640px;
-    height: 360px;s
+    height: 360px;
+    object-fit: contain;
 }
