--- a/Lifesaver/Views/Home/DashBoard.cshtml
+++ b/Lifesaver/Views/Home/DashBoard.cshtml
@@ -4,43 +4,25 @@
 <div class="row">
     <div class="col-md-2"></div>
     <div class="col-sm-8">
-        <div id="demo" class="carousel slide" data-ride="carousel">
-
-            <!-- Indicators -->
-            <ul class="carousel-indicators">
-                <li data-target="#demo" data-slide-to="0" class="active"></li>
-                <li data-target="#demo" data-slide-to="1"></li>
-                <li data-target="#demo" data-slide-to="2"></li>
-            </ul>
-
-            <!-- The slideshow -->
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../Images/1.jpeg" alt=" Reports" width="1100" height="500">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Reports</h5>
-                        <p>hai reports</p>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <img src="../Images/2.jpg" alt="Chicago" width="1100" height="500">
+                    <img class="d-block w-100" src="../Images/1.jpeg" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img src="../Images/3.jpg" alt="New York" width="1100" height="500">
+                    <img class="d-block w-100" src="../Images/1.jpeg" alt="Second slide">
                 </div>
-
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="../Images/1.jpeg" alt="Third slide">
+                </div>
             </div>
-
-
-
-
-            <!-- Left and right controls -->
-            <a class="carousel-control-prev" href="#demo" data-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#demo" data-slide="next">
-                <span class="carousel-control-next-icon"></span>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
             </a>
         </div>
 
@@ -48,38 +30,42 @@
     <div class="col-md-2"></div>
 </div>
 
-<div class="card-deck">
+<span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
 
+
+<div class="card-deck">
     <div class="card">
-        <img class="card-img-top" src="../Images/1.jpeg" alt="Card image">
+        <img class="card-img-top" src="~/Images/1.jpeg" alt="Card image cap">
         <div class="card-body">
-            <h4 class="card-title">Images</h4>
-            <p class="card-text">To get overall summary about reported cases across different locations.</p>
-            <a href="~/Views/Home/LoginPage.cshtml" class="btn btn-primary">View Reports</a>
+            <h5 class="card-title">Report</h5>
+            <p class="card-text"> A graph , bar chart, pie chart to represent the  number of reports based on location, time,place.</p>
+            <a href="#" class="btn btn-primary">Click here</a>
         </div>
     </div>
     <div class="card">
-        <img class="card-img-top" src="../Images/1.jpeg" alt="Card image">
+        <img class="card-img-top" src="~/Images/1.jpeg" alt="Card image cap">
         <div class="card-body">
-            <h4 class="card-title">Reports</h4>
-            <p class="card-text">To get overall summary about reported cases across different locations.</p>
-            <a href="~/Views/Home/LoginPage.cshtml" class="btn btn-primary">View Reports</a>
+            <h5 class="card-title">Inventory</h5>
+            <p class="card-text"> A graph , bar chart, pie chart to represent the  number of reports based on location, time,place.</p>
+            <a href="#" class="btn btn-primary">Click here</a>
         </div>
     </div>
     <div class="card">
-        <img class="card-img-top" src="../Images/1.jpeg" alt="Card image">
+        <img class="card-img-top" src="~/Images/1.jpeg" alt="Card image cap">
         <div class="card-body">
-            <h4 class="card-title">Inventory</h4>
-            <p class="card-text">To get overall summary about reported cases across different locations.</p>
-            <a href="~/Views/Home/LoginPage.cshtml" class="btn btn-primary">View Reports</a>
+            <h5 class="card-title">Compare</h5>
+            <p class="card-text"> A graph , bar chart, pie chart to represent the  number of reports based on location, time,place.</p>
+            <a href="#" class="btn btn-primary">Click here</a>
         </div>
     </div>
     <div class="card">
-        <img class="card-img-top" src="../Images/1.jpeg" alt="Card image">
+        <img class="card-img-top" src="~/Images/1.jpeg" alt="Card image cap">
         <div class="card-body">
-            <h4 class="card-title">Compare</h4>
-            <p class="card-text">To get overall summary about reported cases across different locations.</p>
-            <a href="~/Views/Home/LoginPage.cshtml" class="btn btn-primary">View Reports</a>
+            <h5 class="card-title">Image</h5>
+            <p class="card-text"> A graph , bar chart, pie chart to represent the  number of reports based on location, time,place.</p>
+            <a href="#" class="btn btn-primary">Click here</a>
         </div>
     </div>
 </div>
+
+
