--- a/LifeSaverSite/Views/Home/DashBoard.cshtml
+++ b/LifeSaverSite/Views/Home/DashBoard.cshtml
@@ -1,70 +1,71 @@
-﻿
-@{
-    ViewBag.Title = "DashBoard";
+﻿@{
+    ViewBag.Title = "Dashboard";
 }
-
-
-<div class="container-fluid">
-    <img src="cinqueterre.jpg" class="rounded-circle" alt="Logo" width="304" height="236">
-</div>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
-    <div class="flex-grow-1 d-flex">
-
-        <form class="form-inline flex-nowrap bg-light mx-0 mx-lg-auto rounded p-1">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-sm-8">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="../Images/1.jpeg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="../Images/1.jpeg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="../Images/1.jpeg" alt="Third slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
 
     </div>
-
-</nav>
-
-
-<div class="text-center">
-    <h2>Dashboard</h2>
-</div>
-<div class="container">
-    <ul class="nav">
-        <li class="nav-item">
-            <a class="nav-link" href="#">Dashboard</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Report</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Inventroy</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Search</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Compare</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Image</a>
-        </li>
-
-    </ul>
+    <div class="col-md-2"></div>
 </div>
 
-<div class="container">
-    <nav class="navbar navbar-expand-sm bg-light justify-content-center">
+<span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
 
-        <ul class="navbar">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">SiteMap</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">privacy Policies</a>
-            </li>
 
-        </ul>
-    </nav>
+<div class="card-deck">
+    <div class="card">
+        <img class="card-img-top" src="~/Images/1.jpeg" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">Report</h5>
+            <p class="card-text"> A graph , bar chart, pie chart to represent the  number of reports based on location, time,place.</p>
+            <a href="#" class="btn btn-primary">Click here</a>
+        </div>
+    </div>
+    <div class="card">
+        <img class="card-img-top" src="~/Images/1.jpeg" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">Inventory</h5>
+            <p class="card-text"> A graph , bar chart, pie chart to represent the  number of reports based on location, time,place.</p>
+            <a href="#" class="btn btn-primary">Click here</a>
+        </div>
+    </div>
+    <div class="card">
+        <img class="card-img-top" src="~/Images/1.jpeg" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">Compare</h5>
+            <p class="card-text"> A graph , bar chart, pie chart to represent the  number of reports based on location, time,place.</p>
+            <a href="#" class="btn btn-primary">Click here</a>
+        </div>
+    </div>
+    <div class="card">
+        <img class="card-img-top" src="~/Images/1.jpeg" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">Image</h5>
+            <p class="card-text"> A graph , bar chart, pie chart to represent the  number of reports based on location, time,place.</p>
+            <a href="#" class="btn btn-primary">Click here</a>
+        </div>
+    </div>
 </div>
-
 
 
