changed the photo for report

--- a/LifeSaverSite/Views/Home/Report.cshtml
+++ b/LifeSaverSite/Views/Home/Report.cshtml
@@ -16,4 +16,4 @@
     <li class="list-group-item">May Report</li>
     
 </ul>
-<img src="~/Content/Img/reportpic.jpg" class="mx-auto d-block img-fluid img-thumbnail" />
+<img src="~/Content/Img/capture.jpg" class="mx-auto d-block img-fluid img-thumbnail" />
