--- a/LifeSaverSite/Views/Home/Login.cshtml
+++ b/LifeSaverSite/Views/Home/Login.cshtml
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
-<body style="background-image: url( ~/Images/login2.jpg); background-repeat:no-repeat; background-size:cover">
+<body style="background-image: url( ~/Content/Img/ComputerKeyboard-2.jpg); background-repeat:no-repeat; background-size:cover">
 
 
     <div class="container">
