--- a/LifeSaverSite/Views/Shared/_Layout.cshtml
+++ b/LifeSaverSite/Views/Shared/_Layout.cshtml
@@ -12,19 +12,19 @@
  
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            @Html.ActionLink("", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto nav-link">
-                    <li>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Dashboard", "Dashboard", "Home", null, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Report", "Index", "Report", null, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("FAQ", "FAQ", "Home", null, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Home", "Index", "Home",  new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Dashboard", "Dashboard", "Home", new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Compare", "Compare", "Home", new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Image", "Image", "Home",  new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Report", "Index", "Report", new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Inventory", "Inventory", "Home", new { @class = "nav-link" })</li>
 
                 </ul>
             </div>
