--- a/LifeSaverSite/Views/Home/Report.cshtml
+++ b/LifeSaverSite/Views/Home/Report.cshtml
@@ -17,3 +17,4 @@
     
 </ul>
 <img src="~/Content/Img/capture.jpg" class="mx-auto d-block img-fluid img-thumbnail" />
+<button type="export to PDF" class="btn btn-primary">Export To PDF</button>
