edited report tabs

--- a/LifeSaverSite/Views/Home/Report.cshtml
+++ b/LifeSaverSite/Views/Home/Report.cshtml
@@ -6,15 +6,16 @@
 
 
 
-<h2>Report</h2>
-
-<ul class="Select Month">
-    <li class="list-group-item">Januaray Report</li>
-    <li class="list-group-item">February Report</li>
-    <li class="list-group-item">March Report</li>
-    <li class="list-group-item">April Report</li>
-    <li class="list-group-item">May Report</li>
-    
-</ul>
+<div class="container">
+    <h2>Reports</h2>
+    <p>Select the month for your report:</p>
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">Jan 19</li>
+        <li class="list-group-item">Feb 19</li>
+        <li class="list-group-item">Mar 19</li>
+        <li class="list-group-item">Apr 19</li>
+        <li class="list-group-item">May 19</li>
+    </ul>
+</div>
 <img src="~/Content/Img/capture.jpg" class="mx-auto d-block img-fluid img-thumbnail" />
 <button type="export to PDF" class="btn btn-primary">Export To PDF</button>
