added space in image page

--- a/LifeSaverSite/Views/Home/Image.cshtml
+++ b/LifeSaverSite/Views/Home/Image.cshtml
@@ -4,6 +4,11 @@
 }
 
 <h2>Image</h2>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p>Select your image by entering the patientID:</p>
 
 <input type="file" class="form-control-file border">
 
