Added jumbotron contacts heading

--- a/LifeSaverSite/Views/Home/Contact.cshtml
+++ b/LifeSaverSite/Views/Home/Contact.cshtml
@@ -1,8 +1,10 @@
-﻿@{
-    ViewBag.Title = "Contact";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿
+
+<div class="jumbotron">
+    <h1>Contacts</h1>
+    <p>Addresses and Phone Numbers of Each Clinics</p>
+</div>
+
 
 <address>
     Clinic A<br />
