added jumbotron to reports header

--- a/LifeSaverSite/Views/Home/Report.cshtml
+++ b/LifeSaverSite/Views/Home/Report.cshtml
@@ -7,8 +7,11 @@
 
 
 <div class="container">
-    <h2>Reports</h2>
-    <p>Select the month for your report:</p>
+    <div class="jumbotron">
+        <h1>Reports</h1>
+        <p>Select the month for your report:</p>
+    </div>
+  
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item">Jan 19</li>
         <li class="list-group-item">Feb 19</li>
