added jumbotron to image header

--- a/LifeSaverSite/Views/Home/Image.cshtml
+++ b/LifeSaverSite/Views/Home/Image.cshtml
@@ -3,12 +3,12 @@
     ViewBag.Title = "Image";
 }
 
-<h2>Image</h2>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p>Select your image by entering the patientID:</p>
+<div class="jumbotron">
+    <h1>Image</h1>
+    <p>Select your image by entering the patientID:</p>
+</div>
+
+
 
 <input type="file" class="form-control-file border">
 
