--- a/LifeSaverSite/Views/Home/About.cshtml
+++ b/LifeSaverSite/Views/Home/About.cshtml
@@ -1,7 +1,15 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿<div class="jumbotron">
+    <h1>About LifeSaver</h1>
+    <p>
+        “LifeSaver’s telemetry and reporting system provide doctors with convenience, accurate
+        information, and data visualization capabilities, enabling the user to provide the best care.”
+    </p>
+</div>
 
-<p>Use this area to provide additional information.</p>
+<img src="~/Content/Img/telemetry.jpg" class="mx-auto d-block img-fluid img-thumbnail" />
+<p>
+    Our main motivation is to provide a system which can receive data from the app and visualize it.
+    This system will help them improve the overall data collection process and achieving their
+    goal of helping cure neonatal jaundice in Northern Nigeria and beyond. Our objective is to provide
+    the above capabilities using advanced searching and comparison methods which are highly user-friendly..
+</p>
