correct motivation in about section

--- a/LifeSaverSite/Views/Home/About.cshtml
+++ b/LifeSaverSite/Views/Home/About.cshtml
@@ -11,5 +11,5 @@
     Our main motivation is to provide a system which can receive data from the app and visualize it.
     This system will help them improve the overall data collection process and achieving their
     goal of helping cure neonatal jaundice in Northern Nigeria and beyond. Our objective is to provide
-    the above capabilities using advanced searching and comparison methods which are highly user-friendly..
+    the above capabilities using advanced searching and comparison methods which are highly user-friendly.
 </p>
