--- a/LifeSaverSite/Views/Home/Contact.cshtml
+++ b/LifeSaverSite/Views/Home/Contact.cshtml
@@ -6,31 +6,46 @@
 </div>
 
 
-<address>
-    Clinic A<br />
-    Ishaga Rd, Idi-Araba, Lagos, Nigeria<br />
-    <abbr title="Phone">P:</abbr>
-    +234 154 232 1212
-</address>
+<body>
 
-<address>
-    Clinic B<br />
-    Cadastral Zone, Life Camp, Plot 113, Abuja, Nigeria<br />
-    <abbr title="Phone">P:</abbr>
-    +234 123 212 8634
-</address>
+    <div class="container">
+        <h2>Address and Phone Numbers</h2>
+        
+        <div class="card-deck">
+            <div class="card bg-primary">
+                <div class="card-body text-center">
+                    <p class="card-text">Clinic A</p>
+                    <p class="card-text"></p>
+                    <p class="card-text">Ishaga Rd, Idi-Araba, Lagos, Nigeria</p>
+                    <p class="card-text"> +234 154 232 1212</p>
+                </div>
+            </div>
+            <div class="card bg-primary">
+                <div class="card-body text-center">
+                    <p class="card-text">Clinic B</p>
+                    <p class="card-text"></p>
+                    <p class="card-text">Cadastral Zone, Life Camp, Plot 113, Abuja, Nigeria</p>
+                    <p class="card-text"> +234 123 212 8634</p>
+                </div>
+            </div>
+            <div class="card bg-primary">
+                <div class="card-body text-center">
+                    <p class="card-text">Clinic C</p>
+                    <p class="card-text"></p>
+                    <p class="card-text">Dorayi Babba, 1C Forestry Road, Kano, Nigeria</p>
+                    <p class="card-text"> +234 545 348 9093</p>
+                </div>
+            </div>
+            <div class="card bg-primary">
+                <div class="card-body text-center">
+                    <p class="card-text">Clinic D</p>
+                    <p class="card-text"></p>
+                    <p class="card-text">I Katsina Rd, Kano, Nigeria</p>
+                    <p class="card-text"> +234 143 812 5635</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
-<address>
-    Clinic C<br />
-    Dorayi Babba, 1C Forestry Road, Kano, Nigeria<br />
-    <abbr title="Phone">P:</abbr>
-    +234 545 348 9093
-</address>
-
-<address>
-    Clinic D<br />
-    I Katsina Rd, Kano, Nigeria<br />
-    <abbr title="Phone">P:</abbr>
-    +234 143 812 5635
-</address>
+</body>
 
