Added Compare Inventory Buttton on Invetory webpage

--- a/LifeSaverSite/Views/Home/Inventory.cshtml
+++ b/LifeSaverSite/Views/Home/Inventory.cshtml
@@ -6,14 +6,19 @@
 <!--  <body style="background-image:url('~/Content/Img/Inventory_Background.jpg'); background-repeat:no-repeat; background-size:cover">   -->
 <div class="container">
     <h3>Inventory</h3>
-    <ul class="nav nav-tabs">
-        <li class="active"><a href="#">Lagos Clinics</a></li>
-        <li><a href="#">Yobe Clinics</a></li>
-        <li><a href="#">Abia Clinic</a></li>
-        <li><a href="#">Cross River Clinic</a></li>
-    </ul>
+    <div class="container">
+        <div class="row">
+            <ul class="nav nav-tabs">
+                <li class="active"><a href="#">Lagos Clinics</a></li>
+                <li><a href="#">Yobe Clinics</a></li>
+                <li><a href="#">Abia Clinic</a></li>
+                <li><a href="#">Cross River Clinic</a></li>
+            </ul>
+            <button type="button" class="btn btn-primary">Compare Inventory</button>
+        </div>
+    </div>
     <table class="table table-striped">
-        <thead><tr><th>Inventory List of Clinics in Lagos</th></tr></thead>
+        <thead><tr><th>Inventory List of Clinics in LAGOS</th></tr></thead>
         <thead>
             <tr>
                 <th>Clinic Id</th>
