--- a/LifeSaverSite/Views/Home/Compare.cshtml
+++ b/LifeSaverSite/Views/Home/Compare.cshtml
@@ -4,4 +4,12 @@
 }
 
 <h2>Compare</h2>
-
+<div class="container mt-3">
+    <br>
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link active" data-toggle="tab" href="#home">Inventory Comparison</a>
+        </li>
+    </ul>
+</div>
