Added Reports Comparison tab under Compare webpage

--- a/LifeSaverSite/Views/Home/Compare.cshtml
+++ b/LifeSaverSite/Views/Home/Compare.cshtml
@@ -11,5 +11,8 @@
         <li class="nav-item">
             <a class="nav-link active" data-toggle="tab" href="#home">Inventory Comparison</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" data-toggle="tab" href="#menu1">Reports Comparison</a>
+        </li>
     </ul>
 </div>
