Linked Compare Image to Compare Webpage

--- a/LifeSaverSite/Views/Home/Compare.cshtml
+++ b/LifeSaverSite/Views/Home/Compare.cshtml
@@ -9,10 +9,29 @@
     <!-- Nav tabs -->
     <ul class="nav nav-tabs">
         <li class="nav-item">
-            <a class="nav-link active" data-toggle="tab" href="#home">Inventory Comparison</a>
+            <a class="nav-link active" data-toggle="tab" href="#home">Overall Comparison</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#menu1">Reports Comparison</a>
+            <a class="nav-link" data-toggle="tab" href="#menu1">Inventory Comparison</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" data-toggle="tab" href="#menu2">Reports Comparison</a>
         </li>
     </ul>
+</div>
+<!-- Tab panes -->
+<div class="tab-content">
+    <div id="home" class="container tab-pane active">
+        <br>
+        <img src="~/Content/Img/compare.JPG" class="mx-auto d-block img-fluid img-thumbnail" />
+    </div>
+    <div id="menu1" class="container tab-pane fade">
+        <br>
+        <h3>Compare Inventory of two clinics</h3>
+    </div>
+    <div id="menu2" class="container tab-pane fade">
+        <br>
+        <h3>Compare Reports of two clinics</h3>
+    </div>
+</div>
 </div>
