updated login page

--- a/LifeSaverSite/Views/Home/Login.cshtml
+++ b/LifeSaverSite/Views/Home/Login.cshtml
@@ -2,11 +2,7 @@
 @{
     ViewBag.Title = "LoginPage";
 }
-<head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-</head>
+
 <body style="background-image: url( ~/Content/Img/ComputerKeyboard-2.jpg); background-repeat:no-repeat; background-size:cover">
 
 
@@ -38,6 +34,7 @@
                             </label>
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
+                        <span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
                     </div>
                 </div>
             </div>
