updated footer page as they have contact us two times and other unnecessary things

--- a/LifeSaverSite/Views/Shared/footer.cshtml
+++ b/LifeSaverSite/Views/Shared/footer.cshtml
@@ -10,9 +10,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto nav-link">
                         <li>@Html.ActionLink("About", "About", "Home", new { @class = "nav-link" })</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home", new { @class = "nav-link" })</li>
+                        <li>@Html.ActionLink("Contact ", "Contact", "Home", new { @class = "nav-link" })</li>
                         <li>@Html.ActionLink("FAQ", "FAQ", "Home", new { @class = "nav-link" })</li>
-                        <li>@Html.ActionLink("Contact Us", "Contact Us", "Home", new { @class = "nav-link" })</li>
+                        <li>@Html.ActionLink("Terms And Conditions", "Terms And Conditions", "Home", new { @class = "nav-link" })</li>
+                        <li>@Html.ActionLink("Privacy Policies", "Privacy Policies", "Home", new { @class = "nav-link" })</li>
 
                     </ul>
                  
