Updated Clinic Tab layout on Inventory Page

--- a/LifeSaverSite/Views/Home/Inventory.cshtml
+++ b/LifeSaverSite/Views/Home/Inventory.cshtml
@@ -6,22 +6,32 @@
 <!--  <body style="background-image:url('~/Content/Img/Inventory_Background.jpg'); background-repeat:no-repeat; background-size:cover">   -->
 <div class="container">
     <h3>Inventory</h3>
-    <div class="container">
+    <div class="container mt-3">
+        <br>
+        <!-- Nav tabs -->
         <ul class="nav nav-tabs">
-            <li><a href="#">Lagos Clinics</a></li>
-            <li><a href="#">Yobe Clinics</a></li>
-            <li><a href="#">Abia Clinic</a></li>
-            <li><a href="#">Cross River Clinic</a></li>
+            <li class="nav-item">
+                <a class="nav-link active" data-toggle="tab" href="#home">Clinic A</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#menu1">Clinic B</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#menu2">Clinic C</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#menu2">Clinic D</a>
+            </li>
             <li>
                 <div class="text-right">
                     <button type="button" class="bottom-right" style="margin-left:925px;">Compare Inventory</button>
                 </div>
-            </li>     
+            </li>
         </ul>
     </div>
         
     <table class="table table-striped">
-        <thead><tr><th>Inventory List of Clinics in LAGOS</th></tr></thead>
+        <thead><tr><th>Inventory List of Clinic A</th></tr></thead>
         <thead>
             <tr>
                 <th>Clinic Id</th>
