Re-Arranged menu item and corrected Spelling mistake

--- a/LifeSaverSite/Views/Home/Inventory.cshtml
+++ b/LifeSaverSite/Views/Home/Inventory.cshtml
@@ -37,7 +37,7 @@
                 <th>Clinic Id</th>
                 <th>Name</th>
                 <th>Date of Order</th>
-                <th>Unit Prize</th>
+                <th>Unit Price</th>
                 <th>Quantity In Stock</th>
                 <th>Reorder Time (In Days)</th>
                 <th> Reorder Quantity</th>
