Added dropdown item under Inventory Comparison tab

--- a/LifeSaverSite/Views/Home/Compare.cshtml
+++ b/LifeSaverSite/Views/Home/Compare.cshtml
@@ -28,10 +28,21 @@
     <div id="menu1" class="container tab-pane fade">
         <br>
         <h3>Compare Inventory of two clinics</h3>
-    </div>
-    <div id="menu2" class="container tab-pane fade">
-        <br>
-        <h3>Compare Reports of two clinics</h3>
-    </div>
-</div>
+        <div class="dropdown">
+            <div class="row">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                    Clinic A
+                </button>
+            </div>
+            <div class="row"> <p>       </p> </div>
+            <div class="row">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                    Clinic B
+                </button>
+            </div>
+            <div id="menu2" class="container tab-pane fade">
+                <br>
+                <h3>Compare Reports of two clinics</h3>
+            </div>
+        </div>
 </div>
