Added Login page as Homepage

--- a/LifeSaverSite/Views/Home/DashBoard.cshtml
+++ b/LifeSaverSite/Views/Home/DashBoard.cshtml
@@ -26,6 +26,26 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+        <div class="container">
+
+            <div class="row">
+
+
+                <div class="container">
+                    <div id="myCarousel" class="carousel slide">
+                        car
+                    </div>
+
+                    <div class="row">
+                        <div class="col">col 1</div>
+                        <div class="col">col 2</div>
+                    </div>
+
+                </div>
+
+            </div>Hey
+        </div>
+
 
     </div>
     <div class="col-md-2"></div>
