Removed Login page from footer and added it to header

--- a/LifeSaverSite/Views/Home/DashBoard.cshtml
+++ b/LifeSaverSite/Views/Home/DashBoard.cshtml
@@ -27,26 +27,22 @@
             </a>
         </div>
         <div class="container">
+            <div> <p> </p></div>
 
             <div class="row">
 
 
                 <div class="container">
-                    <div id="myCarousel" class="carousel slide">
-                        car
-                    </div>
-
                     <div class="row">
-                        <div class="col">col 1</div>
-                        <div class="col">col 2</div>
+                        <div class="col">
+                            <img class="d-block w-100 h-auto" src="~/Content/Img/numoffail.JPG">
+                        </div>
+                        <div class="col">
+                            <img class="d-block w-100 h-auto" src="~/Content/Img/numcaseclinic.JPG">
+                        </div>
                     </div>
 
                 </div>
-
-            </div>Hey
-        </div>
-
-
     </div>
     <div class="col-md-2"></div>
 </div>
