--- a/LifeSaverSite/Views/Shared/_Layout.cshtml
+++ b/LifeSaverSite/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto nav-link">
-
+                    <li>@Html.ActionLink("Login ", "Login", "Home", new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Dashboard", "Dashboard", "Home", new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Image", "Image", "Home", new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Report", "Report", "Home", new { @class = "nav-link" })</li>
